[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/sprites/animations/enemies/boss/Boss_jesus.png" type="Texture" id=1]
[ext_resource path="res://src/characters/BossJesus.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/hit_shader.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=49]
shader = ExtResource( 3 )
shader_param/active = false
shader_param/toColor = null

[sub_resource type="CircleShape2D" id=48]
radius = 78.6233

[node name="BossJesusRB" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="BossJesus" type="Sprite" parent="."]
material = SubResource( 49 )
scale = Vector2( 1.08709, 1.08709 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.28571, 8.57141 )
shape = SubResource( 48 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
